--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="first-section">
         <div class="navbar">
             <div class="navbar-left">
-                Header Logo
+                <p class="header-logo">Header Logo</p>
             </div>
             <div class="navbar-right">
-                <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                <ul style="list-style-type: none;">
+                    <li class="header-link">header link one</li>
+                    <li class="header-link">header link two</li>
+                    <li class="header-link">header link three</li>
                 </ul>
             </div>
         </div>
