Add hero section elements

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
                 </ul>
             </div>
         </div>
+        <div class="hero">
+            <div class="hero-left">
+                <h1>This website is awesome</h1>
+                <p class="header-link">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button type="button" class="sign-up-first-section">Sign up</button>
+            </div>
+            <div class="hero-right">
+                <img src="https://media.beehiiv.com/cdn-cgi/image/format=auto,width=800,height=421,fit=scale-down,onerror=redirect/uploads/asset/file/60563fa3-fea5-4be3-bcf8-62fdfdf29193/Fabian_Franks_Weekly.png" alt="Fabian Franks Weekly Banner" width="500">
+            </div>
+        </div>
     </div>
 
 </body>
