Add branding and copywriting elements to CSS & HTML

--- a/index.html
+++ b/index.html
@@ -11,24 +11,32 @@
     <div class="first-section">
         <div class="navbar">
             <div class="navbar-left">
-                <p class="header-logo">Header Logo</p>
+                <p class="header-logo">Fabian Frank Werner</p>
             </div>
             <div class="navbar-right">
                 <ul style="list-style-type: none;">
-                    <li class="header-link">header link one</li>
-                    <li class="header-link">header link two</li>
-                    <li class="header-link">header link three</li>
+                    <a href="https://www.youtube.com/@fabianfrankwerner" target="_blank" rel="noopener noreferrer">
+                        <li class="header-link">YouTube</li>
+                    </a>
+                    <a href="https://www.instagram.com/fabianfrankwerner/" target="_blank" rel="noopener noreferrer">
+                        <li class="header-link">Instagram</li>
+                    </a>
+                    <a href="mailto:fabianfrankwerner@gmail.com">
+                        <li class="header-link">E-mail</li>
+                    </a>
                 </ul>
             </div>
         </div>
         <div class="hero">
             <div class="hero-left">
-                <h1>This website is awesome</h1>
-                <p class="header-link">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button type="button" class="sign-up-first-section">Sign up</button>
+                <h1>Welcome! </br> This is my </br> first website.</h1>
+                <p class="p-first">If we haven’t met before - Hey 👋 I’m Fabian, a student-turned-creator. </br> I am exploring how we can live a wealthier, healthier & happier life. </br> My weekly learnings are shared all over the internet!</p>
+                <a href="https://www.youtube.com/@fabianfrankwerner" target="_blank" rel="noopener noreferrer">
+                    <button type="button" class="sign-up-first-section">My GitHub</button>
+                </a>
             </div>
             <div class="hero-right">
-                <img src="https://media.beehiiv.com/cdn-cgi/image/format=auto,width=800,height=421,fit=scale-down,onerror=redirect/uploads/asset/file/60563fa3-fea5-4be3-bcf8-62fdfdf29193/Fabian_Franks_Weekly.png" alt="Fabian Franks Weekly Banner" width="500">
+                <img src="./images/Fabian Frank Werner.png" alt="Fabian Frank Werner" width="500">
             </div>
         </div>
     </div>
