Finising touches to the hero & navbar section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="hero-left">
                 <h1>Welcome! </br> This is my </br> first website.</h1>
                 <p class="p-first">If we haven’t met before - Hey 👋 I’m Fabian, a student-turned-creator. </br> I am exploring how we can live a wealthier, healthier & happier life. </br> My weekly learnings are shared all over the internet!</p>
-                <a href="https://www.youtube.com/@fabianfrankwerner" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/fabianfrankwerner" target="_blank" rel="noopener noreferrer">
                     <button type="button" class="sign-up-first-section">My GitHub</button>
                 </a>
             </div>
