--- a/index.html
+++ b/index.html
@@ -41,5 +41,27 @@
         </div>
     </div>
 
+    <div class="second-section">
+        <h2>Some random information.</h2>
+        <div class="four-image-row">
+            <div class="box-color-p">
+                <div class="box-color"></div>
+                <p class="p-second">this is some subtext </br> under an illustration </br> image</p>
+            </div>
+            <div class="box-color-p">
+                <div class="box-color"></div>
+                <p class="p-second">this is some subtext </br> under an illustration </br> image</p>
+            </div>
+            <div class="box-color-p">
+                <div class="box-color"></div>
+                <p class="p-second">this is some subtext </br> under an illustration </br> image</p>
+            </div>
+            <div class="box-color-p">
+                <div class="box-color"></div>
+                <p class="p-second">this is some subtext </br> under an illustration </br> image</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
