--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             </div>
             <div class="navbar-right">
                 <ul style="list-style-type: none;">
+                    <a href="https://github.com/fabianfrankwerner" target="_blank" rel="noopener noreferrer">
+                        <li class="header-link">GitHub</li>
+                    </a>
                     <a href="https://www.youtube.com/@fabianfrankwerner" target="_blank" rel="noopener noreferrer">
                         <li class="header-link">YouTube</li>
                     </a>
@@ -22,18 +25,18 @@
                         <li class="header-link">Instagram</li>
                     </a>
                     <a href="mailto:fabianfrankwerner@gmail.com">
-                        <li class="header-link">E-mail</li>
+                        <li class="header-link">Contact</li>
                     </a>
                 </ul>
             </div>
         </div>
         <div class="hero">
             <div class="hero-left">
-                <h1>Welcome! </br> This is my </br> first website.</h1>
-                <p class="p-first">If we haven’t met before - Hey 👋 I’m Fabian, a student-turned-creator. </br> I am exploring how we can live a wealthier, healthier & happier life. </br> My weekly learnings are shared all over the internet!</p>
-                <a href="https://github.com/fabianfrankwerner" target="_blank" rel="noopener noreferrer">
-                    <button type="button" class="sign-up-first-section">My GitHub</button>
-                </a>
+                <h1>👋 Welcome! </br> This is my first website... </br> I made it with CSS3 & HTML5</h1>
+                <p class="p-first">Hey, I'm Fabian - a student-turned-creator. </br></br> My mission is as simple as it gets: </br> I want to live the best life humanly possible! </br></br> The learnings on this journey are all shared online... </br> Find them through my videos, newsletter and other socials! </br></br> Have a great day 💛</p>
+                <!-- <a href="https://fabianfrankwerner.beehiiv.com/subscribe" target="_blank" rel="noopener noreferrer">
+                    <button type="button" class="sign-up-first-section">Newsletter</button>
+                </a> -->
             </div>
             <div class="hero-right">
                 <img src="./images/Fabian Frank Werner.png" alt="Fabian Frank Werner" width="500">
