Add quote for section three with href to origin

--- a/index.html
+++ b/index.html
@@ -66,5 +66,14 @@
         </div>
     </div>
 
+    <div class="third-section">
+        <h3>Code and media are permissionless leverage. </br> They're the leverage behind the newly rich. </br> You can create software and media that works for you while you sleep.</h3>
+        <div class="p-div">
+            <a href="https://twitter.com/naval/status/1002106893265920000?" target="_blank" rel="noopener noreferrer">
+                <p class="p-third">Naval Ravikant (31st May 2018)</p>
+            </a>
+        </div>
+    </div>
+
 </body>
 </html>
