Add section for with newsletter subscribe button

--- a/index.html
+++ b/index.html
@@ -75,5 +75,19 @@
         </div>
     </div>
 
+    <div class="fourth-section">
+        <div class="container">
+            <div class="left-container">
+                <h4>Fabian Franks Weekly</h4>
+                <p class="fourth-p">Subscribe for free to get my weekly learnings delivered to your inbox!</p>
+            </div>
+            <div class="right-container">
+                <a href="https://fabianfrankwerner.beehiiv.com/subscribe" target="_blank" rel="noopener noreferrer">
+                    <button type="button" class="btn-last-div">Subscribe</button>
+                </a>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
