--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
     </div>
 
     <div class="second-section">
-        <h2>Some random information.</h2>
+        <h2>My Core Values</h2>
         <div class="four-image-row">
             <div class="box-color-p">
                 <div class="box-color"></div>
-                <p class="p-second">this is some subtext </br> under an illustration </br> image</p>
+                <p class="p-second">Authenticity</p>
             </div>
             <div class="box-color-p">
                 <div class="box-color"></div>
-                <p class="p-second">this is some subtext </br> under an illustration </br> image</p>
+                <p class="p-second">Empathy</p>
             </div>
             <div class="box-color-p">
                 <div class="box-color"></div>
-                <p class="p-second">this is some subtext </br> under an illustration </br> image</p>
+                <p class="p-second">Resilience</p>
             </div>
             <div class="box-color-p">
                 <div class="box-color"></div>
-                <p class="p-second">this is some subtext </br> under an illustration </br> image</p>
+                <p class="p-second">Innovation</p>
             </div>
         </div>
     </div>
@@ -87,6 +87,10 @@
                 </a>
             </div>
         </div>
+    </div>
+
+    <div class="footer">
+        Copyright © Fabian Frank Werner
     </div>
 
 </body>
