Add icons to 'my core values' section

--- a/index.html
+++ b/index.html
@@ -48,20 +48,36 @@
         <h2>My Core Values</h2>
         <div class="four-image-row">
             <div class="box-color-p">
-                <div class="box-color"></div>
+
+                <div class="box-color">
+                    <img class="authenticity" src="./images/authenticity.png" alt="authenticity">
+                </div>
                 <p class="p-second">Authenticity</p>
+
             </div>
             <div class="box-color-p">
-                <div class="box-color"></div>
+
+                <div class="box-color">
+                    <img class="empathy" src="./images/empathy.png" alt="empathy">
+                </div>
                 <p class="p-second">Empathy</p>
+
             </div>
             <div class="box-color-p">
-                <div class="box-color"></div>
+
+                <div class="box-color">
+                    <img class="resilience" src="./images/resilience.png" alt="resilience">
+                </div>
                 <p class="p-second">Resilience</p>
+
             </div>
             <div class="box-color-p">
-                <div class="box-color"></div>
+
+                <div class="box-color">
+                    <img class="innovation" src="./images/innovation.png" alt="innovation">
+                </div>
                 <p class="p-second">Innovation</p>
+
             </div>
         </div>
     </div>
